# nalar

./: .env.example  .env.production.example  .gitignore  ACCESS.md  Caddyfile  DEPLOY.md  DEPLOYMENT.md  DEVELOPMENT_OPTIMIZATION.md  Dockerfile  PHASE1_IMPLEMENTATION.md  PRODUCTION_SETUP.md  QUICK_START.md  README.md  SERVER_SETUP.md  SIMPLE_DEPLOY.md  WEBSOCKET_ANALYSIS.md  deploy.sh  docker-compose.backend-only.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  install  next.config.mjs  optimize-dev.js  package-lock.json  package.json  podman-compose.yml  requirements.txt  reset-database.sh  spotify.md  tailwind.config.ts  test-media-integration.js  tsconfig.json
backend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml  manage.py  pyproject.toml  test_redis.py
backend/api/: schema.py
backend/api/v1/: routers.py  urls.py
backend/apps/admin_ops/: __init__.py  admin.py  apps.py  models.py  tests.py  urls.py
backend/apps/analytics/: __init__.py  models.py  urls.py  views.py
backend/apps/assets/: __init__.py  admin.py  models.py  tests.py  urls.py
backend/apps/common/: cache.py
backend/apps/core/: __init__.py  admin.py  health.py  middleware.py  pagination.py  parsers.py  permissions.py  renderers.py  serializers.py  urls.py  views.py
backend/apps/documents/: __init__.py  admin.py  encryption.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/finance/: __init__.py  admin.py  models.py  urls.py
backend/apps/hr/: __init__.py  admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/config/: urls.py
backend/docs/: MENU_STRUCTURE.md
backend/scripts/: add_tenant_mixin.py  create_s3_buckets.py  entrypoint.sh
(+695 files in other folders)
