[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "django>=5.2.8",
    "django-cors-headers>=4.0.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.4.0",
    "drf-nested-routers>=0.95.0",
    "pillow>=11.0.0",
    "python-dotenv>=1.0.0",
    # Performance
    "django-redis>=5.4.0",
    "redis>=5.0.0",
    "orjson>=3.10.0",
    # Production
    "granian>=1.6.0",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.2.0",
    "whitenoise>=6.8.0",
    "django-filter>=24.0.0",
    "qrcode>=8.2",
    "stripe>=14.0.1",
    "polar-sdk>=0.28.0",
    "drf-spectacular>=0.29.0",
    # Object Storage (S3/RustFS)
    "boto3>=1.34.0",
    "django-storages>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "django-debug-toolbar>=4.4.0",
    "django-silk>=5.3.0",
]
ml = [
    # Face Recognition & ML features (optional - large dependencies)
    "deepface>=0.0.93",
    "tf-keras>=2.18.0",
    "opencv-python>=4.0.0",
    "tensorflow>=2.18.0",
]
